--- a/index.html
+++ b/index.html
@@ -64,10 +64,14 @@
 				<!-- writting  -->
 				<h4 class="text-center" style="">SignUp for our newsletter to be updated</h4>
 				
-				<div class="col-sm-3 col-sm-offset-4">
+				<div class="col-sm-4 col-sm-offset-4">
 					<input type="text" class="form-control" placeholder="you@yourmail.com" style="padding-left: 130px;">
 				</div>
-				<label class="control-label col-sm-1"><button class="btn btn-success" style="background-color: #fdc300; height: 35px; width: 120px; margin-top: -8px; margin-left: -20px;">Notify me</button></label>
+
+
+				<!-- <label class="control-label col-sm-1"><button class="btn btn-success" style="background-color: #fdc300; height: 35px; width: 120px; margin-top: -8px; margin-left: -20px;">Notify me</button></label> -->
+
+
 			</form>
 		</div>
 	</div><br><br>
@@ -75,7 +79,7 @@
 
 	<!-- social media icon -->
 	<div class="row">
-		<div class="col-sm-4 col-sm-offset-5">
+		<div class="col-sm-5 col-sm-offset-5">
 		 <a href="#" class="fa fa-facebook"></a>
       <a href="#" class="fa fa-twitter"></a>
 	  <a href="#" class="fa fa-google"></a>
@@ -112,7 +116,7 @@
 <div class="container">
 	<div class="row">
 		<div class="col-sm-4">
-			<img src="images/6.jpg" class="img-responsive">
+			<img src="images/6.jpg" class="img-responsive" style="border-radius:10px;">
 				<h4 style="font-weight: bold;">It is for the above picture which we take</h4>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
@@ -123,7 +127,7 @@
 		</div>
 
 		<div class="col-sm-4">
-			<img src="images/7.jpg" class="img-responsive">
+			<img src="images/7.jpg" class="img-responsive" style="border-radius:10px;>
 				<h4 style="font-weight: bold;">It is for the above picture which we take</h4>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
@@ -134,7 +138,7 @@
 		</div>
 
 		<div class="col-sm-4">
-			<img src="images/8.jpg" class="img-responsive">
+			<img src="images/8.jpg" class="img-responsive" style="border-radius:10px;>
 				<h4 style="font-weight: bold;">It is for the above picture which we take</h4>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
@@ -147,7 +151,7 @@
 
 	<div class="row"><br><br>
 		<div class="col-sm-4">
-			<img src="images/9.jpg" class="img-responsive">
+			<img src="images/9.jpg" class="img-responsive" style="border-radius:10px;>
 				<h4 style="font-weight: bold;">It is for the above picture which we take</h4>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
@@ -158,7 +162,7 @@
 		</div>
 
 		<div class="col-sm-4">
-			<img src="images/10.jpg" class="img-responsive">
+			<img src="images/10.jpg" class="img-responsive" style="border-radius:10px;>
 				<h4 style="font-weight: bold;">It is for the above picture which we take</h4>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
@@ -169,7 +173,7 @@
 		</div>
 
 		<div class="col-sm-4">
-			<img src="images/11.jpg" class="img-responsive">
+			<img src="images/11.jpg" class="img-responsive" style="border-radius:10px;>
 				<h4 style="font-weight: bold;">It is for the above picture which we take</h4>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
