--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 				<h4 class="text-center" style="">SignUp for our newsletter to be updated</h4>
 				
 				<div class="col-sm-4 col-sm-offset-4">
-					<input type="text" class="form-control" placeholder="you@yourmail.com" style="padding-left: 130px;">
+					<input type="text" class="form-control" placeholder="you@yourmail.com" >
 				</div>
 
 
